Fixed Layout Issues

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -80,9 +80,13 @@ a {
 
 
 header {
+  z-index: 10;
+  height: 13vh;
+  padding-top: 3vh;
+
   h1 {
     font-family: 'Ruslan Display', cursive;
-    font-size: 7vh;
+    font-size: 10vh;
     font-weight: normal;
     @include webkit_reset();
   }
@@ -94,9 +98,6 @@ header {
       padding-top: 0.75vh;
       vertical-align: middle;
     }
-  
-  z-index: 10;
-  height: 7vh;
 }
 
 footer {
@@ -122,8 +123,8 @@ footer {
     height: 90vw;
     width: 90vw;
 
-    max-height: 50vh; 
-    max-width: 50vh;
+    max-height: 70vh; 
+    max-width: 70vh;
 
     &:hover .turnaround, .hover .turnaround { 
       transform: rotateY(180deg);
